[package]
name = "elbowgrease"
version = "0.1.0"
authors = ["Aarni Koskela <akx@iki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
clap = "2.33.3"
anyhow = "1.0.34"
regex = "1.4.2"
flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
rayon = "1.5.0"
indicatif = {version = "0.15.0", features = ["rayon"]}
crossbeam-queue = "0.3.1"
lazy_static = "1.4.0"
